<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_mv_db"
        android:orderInCategory="200"
        android:title="@string/action_upload"
        android:icon="@drawable/ic_share_black_24dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export"
        android:orderInCategory="200"
        android:title="@string/action_export"
        android:icon="@drawable/ic_share_black_24dp"
        app:showAsAction="never" />

</menu>